--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.10.4",
+    "openai": "^4.98.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
